Fixed mobile spacing

--- a/projects.css
+++ b/projects.css
@@ -73,6 +73,8 @@
     .card {
     	margin-top: 0.5em;
     	margin-bottom: 0.5em;
+    	margin-left: 0;
+    	margin-right: 0;
     }
     .section-header {
     	font-size: 40px;
